Version 1.8.6+svn:
 * Language and i18n:
   * Made it so that all of the Hangul Syllables block is covered by the
      font-loading code
   * Updated translations: Estonian, Indonesian, Korean, Portuguese (Brazil),
     Slovak
 * Multiplayer:
   * A New Land:
     * Fixed 'agriculture' not getting translated sometimes and research
       for agriculture not getting counted if the research order wasn't changed
       (bug #16477)
 * User interface:
   * Fix starting location labels being initially invisible in the map editor
     (bug #17956).
   * Fix unhandled utils::invalid_utf8_exception when displaying tooltips

Version 1.8.6:
 * Campaigns:
   * Liberty:
     * Don't show dummy epilogue gamemap
   * The Hammer of Thursagan:
     * Fixed time over event in the High Pass
       (http://forums.wesnoth.org/viewtopic.php?f=4&t=33435)
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified),
     Chinese (Traditional), Czech, French, German, Hungarian, Indonesian,
     Japanese, Korean, Polish, Portuguese (Brazil), Russian, Serbian, Slovak,
     Slovenian, Vietnamese
   * Added missing Windows locale associations
   * Fixed Windows locale association for tr/Turkish
 * Multiplayer:
   * A New Land:
     * Award correct amount of research to units (bug #17406).
   * Don't show team labels to observers (feature request #9648).
   * Recalculate map labels to account for team changes when switching players
     with :control.
 * User interface:
   * Fix old multiplayer lobby glitches caused by the loadscreen code when
     skipping to the lobby with -s <server> command line.
   * Added a new version of multiplayer chat log history dialog
   * Fixed bug with filter textbox not being properly set up while loading the MP
     lobby view
   * Several improvements and fixes for replay controller and control buttons
 * Miscellaneous and bug fixes:
   * Fixed: properly update cmake revision numbers (bug #16483)