@@ -1,4 +1,6 @@
 Version 1.8.6+svn:
+ * Editor:
+   * Fixed various crashes related to drawing/filling operations (bug #18928)
  * Language and i18n:
    * Made it so that all of the Hangul Syllables block is covered by the
       font-loading code
